# app/Models/User.php
@@ -29,12 +29,12 @@ class User extends Authenticatable implements JWTSubject
 
     public function notifications()
     {
-        return $this->hasMany(Notification::class, 'id_user', 'user_id');
+        return $this->hasMany(Notification::class, 'id_user', 'id');
     }
 
     public function histories()
     {
-        return $this->hasMany(History::class, 'id_user', 'user_id');
+        return $this->hasMany(History::class, 'id_user', 'id');
     }
 
     /**
